# memanalyse

./: .gitignore  README.MD  alloc.c  alloc.h  analyse.c  analyse.h  check.c  check.h  error.c  error.h  makefile  memanalyse.sln  shadow.c  shadow.h  utils.h
client/: CMakeLists.txt  myclient.c  myclient.h
lib/: copylib.py
log/: analyse.py
memanalyse/: memanalyse.vcxproj  memanalyse.vcxproj.filters
test/: a32.out  a32.s  test.c
